# ChatApp

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
interview_assistant/: __init__.py  __main__.py  app.py
interview_assistant/ai/: __init__.py  assistant.py  claude_client.py  context.py  ollama_client.py  prompts.py  response_parser.py
interview_assistant/audio/: __init__.py  buffer.py  capture.py  devices.py  vad.py
interview_assistant/core/: __init__.py  config.py  events.py  session.py
interview_assistant/resources/styles/: glassmorphism.css
interview_assistant/services/: __init__.py  shortcuts.py  tray.py  web_viewer.py
interview_assistant/stealth/: __init__.py  display_manager.py  hotkey_popup.py  x11_bypass.py
interview_assistant/storage/: __init__.py  database.py  models.py
interview_assistant/transcription/: __init__.py  processor.py  streaming.py  whisper_engine.py
interview_assistant/ui/: __init__.py  answer_view.py  history_view.py  main_window.py  overlay_window.py  settings_dialog.py  transcript_view.py
interview_assistant/ui/widgets/: __init__.py  audio_level.py  code_block.py  mode_selector.py  status_indicator.py
